force-app/main/default/objects/Message_Template__c/Message_Template__c.object-meta.xml
<CustomObject>
    <description>Approved message templates used by the engagement orchestration layer.</description>
    <label>Message Template</label>
    <nameField>
        <label>Message Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>