force-app/main/default/objects/Message_Template__c/fields/Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Approved_On__c</fullName>
    <label>Approvals</label>
    <type>Date</type>
</CustomField>