force-app/main/default/objects/Message_Template__c/fields/Banned_Phrase_Hit__c.field-meta.xml
<CustomField>
    <fullName>Banned_Phrase_Hit__c</fullName>
    <label>Banned Phrase Hit</label>
    <length>120</length>
    <type>Text</type>
</CustomField>