force-app/main/default/objects/Message_Template__c/fields/Body_Preview__c.field-meta.xml
<CustomField>
    <fullName>Body_Preview__c</fullName>
    <label>Body</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>