force-app/main/default/objects/Message_Template__c/fields/Buttons__c.field-meta.xml
<CustomField>
    <fullName>Buttons__c</fullName>
    <label>Buttons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>