force-app/main/default/objects/Message_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
                <default>true</default>
                <label>Utility</label>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>