force-app/main/default/objects/Message_Template__c/fields/Legal_Approved__c.field-meta.xml
<CustomField>
<fullName>Legal_Approved__c</fullName>
<label>Legal Approved</label>
<type>Checkbox</type>
<defaultValue>false</defaultValue>
</CustomField>