force-app/main/default/objects/Message_Template__c/fields/Legal_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approved_By__c</fullName>
    <label>Approvals</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approvals Records</relationshipLabel>
    <relationshipName>Legal_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>