force-app/main/default/objects/Message_Template__c/fields/Medical_Approved__c.field-meta.xml
<CustomField>
    <fullName>Medical_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Approved</label>
    <type>Checkbox</type>
</CustomField>