force-app/main/default/objects/Message_Template__c/fields/Medical_Approved_By__c.field-meta.xml
<CustomField>
<fullName>Medical_Approved_By__c</fullName>
<label>Medical Approved By</label>
<type>Lookup</type>
<referenceTo>User</referenceTo>
<relationshipName>MessageTemplateMedicalApprovedBy</relationshipName>
</CustomField>