force-app/main/default/objects/Message_Template__c/fields/Meta_Category__c.field-meta.xml
<CustomField>
    <fullName>Meta_Category__c</fullName>
    <label>Meta Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Authentication</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <required>true</required>
</CustomField>