force-app/main/default/objects/Message_Template__c/fields/Provider_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Template_Id__c</fullName>
    <label>Provider Template ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>