force-app/main/default/objects/Message_Template__c/fields/Sendable__c.field-meta.xml
<CustomField>
    <fullName>Sendable__c</fullName>
    <label>Sendable</label>
    <formula>Active__c &amp;&amp; Medical_Approved__c &amp;&amp; Legal_Approved__c &amp;&amp; NOT(ISBLANK(Provider_Template_Id__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>