force-app/main/default/objects/Message_Template__c/fields/Template_Body__c.field-meta.xml
<CustomField>
<fullName>Template_Body__c</fullName>
<label>Template Body</label>
<type>LongTextArea</type>
<length>32768</length>
</CustomField>