force-app/main/default/objects/Message_Template__c/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <label>Template Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>