force-app/main/default/objects/Message_Template__c/fields/Variables__c.field-meta.xml
<CustomField>
    <fullName>Variables__c</fullName>
    <label>Variables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>