force-app/main/default/objects/Message_Template__c/MT_Approval_Before_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>MT_Approval_Before_Active</fullName>
    <active>true</active>
    <errorConditionFormula>Active__c &amp;&amp; (NOT(Medical_Approved__c) || NOT(Legal_Approved__c))</errorConditionFormula>
    <errorMessage>Templates must be medically and legally approved before activation.</errorMessage>
</ValidationRule>