force-app/main/default/objects/Message_Template__c/MT_No_Approval_With_Banned_Phrase.validationRule-meta.xml
<ValidationRule>
    <fullName>MT_No_Approval_With_Banned_Phrase</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Banned_Phrase_Hit__c)) &amp;&amp; (Medical_Approved__c || Legal_Approved__c)</errorConditionFormula>
    <errorMessage>This template contains a banned phrase and cannot be approved.</errorMessage>
</ValidationRule>