force-app/main/default/objects/Message_Template__c/MT_Safety_Needs_Medical.validationRule-meta.xml
<ValidationRule>
<fullName>MT_Safety_Needs_Medical</fullName>
<active>true</active>
<errorConditionFormula>ISPICKVAL(Category__c,'Safety') &amp;&amp; Active__c &amp;&amp; ISBLANK(Medical_Approved_By__c)</errorConditionFormula>
<errorMessage>Safety templates need a named medical approver.</errorMessage>
</ValidationRule>